infra/k8s/frontend_1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: react-app
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-srv
spec:
  selector:
    app: react-app
  ports:
    - name: react-app
      protocol: TCP
      port: 3000
      targetPort: 3000
